--- a/02BlogApp/blog/templates/blog/base.html
+++ b/02BlogApp/blog/templates/blog/base.html
@@ -21,6 +21,19 @@
         </div>
     </header>
 
+    {% if user.is_authenticated %}
+        <p> Welcome, {{ user.username }}! </p>
+        <form method='post' action="{% url 'logout' %}"> {% csrf_token %}
+            <button type="submit" style="background:none; border:none; color:blue; text-decoration:underline; cursor:pointer;">
+                Log Out
+            </button>
+        </form>    
+    {% else %}
+        <p> You are not Logged in. </p>
+        <a href="{% url 'login' %}">Log In </a> |
+        <a href="{% url 'signup' %}">Sign Up </a>
+    {% endif %}
+    
     <div>
         {% block content %}
         {% endblock content %}
