--- a/03NewsApp/templates/home.html
+++ b/03NewsApp/templates/home.html
@@ -6,7 +6,7 @@
     {% if user.is_authenticated %}
         <p> Hello, {{ user.username}}, you are {{user.age}} years old </p>
         <form method='post' action="{% url 'logout' %}"> {% csrf_token %}
-            <button type='submit'> Log Out </button>
+            <button class="btn btn-danger" type='submit'> Log Out </button>
         </form>
     {% else %}
         <p> You are not logged in </p>
