--- a/03NewsApp/templates/article_detail.html
+++ b/03NewsApp/templates/article_detail.html
@@ -1,20 +1,34 @@
-{% extends "base.html" %} 
+{% extends "base.html" %} {% block content %}
 
-{% block content %}
+{% load crispy_forms_tags %}
 
-    <div class="article-entry">
-        <h2>{{ object.title }}</h2>
-        
-        <p>{{ object.author }} | {{ object.date }}</p>
-        
-        <p>{{ object.body }}</p>
-    </div>
+  <div class="article-entry">
+    <h2>{{ object.title }}</h2>
+
+    <p>{{ object.author }} | {{ object.date }}</p>
+
+    <p>{{ object.body }}</p>
+  </div>
+
+    <hr />
+    <h4>Comments</h4>
+    {% for comment in article.comment_set.all %}
+    <p>{{ comment.author }} &middot; {{ comment }}</p>
+    {% endfor %}
+    <hr />
+
+    <h4>Add a comment</h4>
+      <form method="post">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button type="submit" class="btn btn-success ml-2">Save</button>
+      </form>
 
     <p>
-        <a href="{% url 'article_edit' article.pk %}">Edit</a> |
-        <a href="{% url 'article_delete' article.pk %}">Delete</a>
+      <a href="{% url 'article_edit' article.pk %}">Edit</a> |
+      <a href="{% url 'article_delete' article.pk %}">Delete</a>
     </p>
-    
-     <p>Back to <a href="{% url 'article_list' %}">All Articles</a>.</p>
+
+    <p>Back to <a href="{% url 'article_list' %}">All Articles</a>.</p>
 
 {% endblock content %}
