--- a/03NewsApp/templates/403.html
+++ b/03NewsApp/templates/403.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-
 {% block content %}
-    <h2>403 Forbidden</h2>
-    <p>You do not have permission to access this page.</p>
-    <a href="{% url 'article_list' %}">Back to articles</a>
+<div class="text-center mt-5">
+  <h1 class="display-5 text-danger">403 Forbidden</h1>
+  <p class="lead">You do not have permission to access this page.</p>
+  <a href="{% url 'article_list' %}" class="btn btn-outline-primary mt-3">Back to Articles</a>
+</div>
 {% endblock %}
