--- a/03NewsApp/templates/article_edit.html
+++ b/03NewsApp/templates/article_edit.html
@@ -1,13 +1,19 @@
-{% extends "base.html" %} {% block content %}
-
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
-
-<h2>Edit Article</h2>
-<form action="" method="post">
-  {% csrf_token %} 
-  {{ form|crispy }}
-  <button type="submit" class="btn btn-info ml-2">Update</button>
-  <a href="{% url 'article_list' %}">Cancel</a>
-</form>
-
+{% block content %}
+<div class="col-md-8 mx-auto">
+  <div class="card">
+    <div class="card-body">
+      <h2 class="mb-4">✏️ Edit Article</h2>
+      <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="mt-3">
+          <button type="submit" class="btn btn-primary">Update</button>
+          <a href="{% url 'article_list' %}" class="btn btn-outline-secondary ms-2">Cancel</a>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock content %}
