--- a/03NewsApp/templates/article_new.html
+++ b/03NewsApp/templates/article_new.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
-
 {% load crispy_forms_tags %}
-
 {% block content %}
-
-    <h2>New Article</h2>
-    <form action="" method="post"> 
-        {% csrf_token %} 
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-info ml-2">Create</button>
-        <a href="{% url 'article_list' %}">Cancel</a>
-    </form>
-
+<div class="col-md-8 mx-auto">
+  <h2 class="mb-4">📝 New Article</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <div class="mt-3">
+      <button type="submit" class="btn btn-primary">Create</button>
+      <a href="{% url 'article_list' %}" class="btn btn-outline-secondary ms-2">Cancel</a>
+    </div>
+  </form>
+</div>
 {% endblock content %}
