--- a/03NewsApp/templates/home.html
+++ b/03NewsApp/templates/home.html
@@ -1,16 +1,21 @@
 {% extends 'base.html' %}
-
-{% block title %} Home {% endblock title %}
-
+{% block title %}Home{% endblock title %}
 {% block content %}
+  <div class="text-center">
     {% if user.is_authenticated %}
-        <p> Hello, {{ user.username}}, you are {{user.age}} years old </p>
-        <form method='post' action="{% url 'logout' %}"> {% csrf_token %}
-            <button class="btn btn-danger" type='submit'> Log Out </button>
-        </form>
+      <div class="alert alert-success">
+        Hello, <strong>{{ user.username }}</strong>! You are {{ user.age }} years old.
+      </div>
+      <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button class="btn btn-danger">Log Out</button>
+      </form>
     {% else %}
-        <p> You are not logged in </p>
-        <a href="{% url 'login' %}">Log In </a>
-        <a href="{% url 'signup' %}">Sign Up </a>
+      <div class="alert alert-info">
+        You are not logged in.
+      </div>
+      <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">Log In</a>
+      <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
     {% endif %}
+  </div>
 {% endblock content %}
